# CS3012-LCA-Cacomerf

./: LCA.cabal
.stack-work/install/0f3b3bca/flag-cache/: HUnit-1.6.0.0-JrvWwD5n0JVL2qYKQOHt3C  QuickCheck-2.11.3-3XHQpBYb83U2mMvNz2AjQX  ansi-terminal-0.8.1-68npDQcVca27EemJN3IYs6  ansi-wl-pprint-0.6.8.2-64dvxGu0jXABXMYQdWpkF4  call-stack-0.1.0-Eiz5FM8yQXpI3vyQ1Rt4Jq  colour-2.3.4-C3PVIHDZkyCIpOJGl3M0hE  extensible-exceptions-0.1.1.4-J1OT5xNWUKn5hZNwjN7aJn  hostname-1.0-KgNgBUBvR1m553zk6AafHv  mintty-0.1.2-1LXikZIamei3MKofPHSY1O  old-locale-1.0.0.7-26K7wLFR2jK44UeOklvTCh  primitive-0.6.3.0-DaZpcxwJp2TGn8ITSgfI4C  random-1.1-9LLJAJa4iQFLJiLXBOBXBV  regex-base-0.93.2-98bD2PeVUkV8MO804tnXmq  regex-posix-0.95.2-FLMmMz75XIwP5t3X8eXe  test-framework-0.8.2.0-39BykfW3PSR8Wlc5MKLu2s  test-framework-hunit-0.3.0.2-8BK45BpYTRUJudnvBOuIPR  test-framework-quickcheck2-0.3.0.5-G2swgYoPYK2GgDoe2byC1r  tf-random-0.5-BZa4jMFCdGCK8yjkzN18lQ  xml-1.3.14-Iiopw2ucwBuIKdlkbvc4Gm
LCA/: LCA.cabal  LCA.hs  Main.hs
LCA/src/: Graph.hs  LCA.hs  Main.hs
LCA/test/: ArbitraryGraph.hs  BigGraph.hs  BigTree.hs  SampleTree.hs  Spec.hs  Tests.hs
