name:                LCA
version:             0.1.0.0
synopsis:            CS3012
author:              Calum Comerford
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:      base


  hs-source-dirs:     LCA/
  default-language:   Haskell2010

executable LCA
  main-is:            Main.hs
  build-depends:      base
  other-modules:    LCA



  hs-source-dirs:     LCA/
  default-language:   Haskell2010

test-suite ExerciseZero
  main-is: test.hs
  type: exitcode-stdio-1.0
  x-uses-tf: true
  build-depends:  base,
                  HUnit,
                  test-framework,
                  test-framework-hunit,
                  test-framework-quickcheck2


  hs-source-dirs: test, src
  default-language: Haskell2010
  other-modules:  Ex00
