name:                LCA
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/LCA#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Graph
  build-depends:       base >= 4.7 && < 5
                       , containers
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base
                       , LCA
                       , tasty
                       , tasty-quickcheck
                       , tasty-hunit
  default-language:    Haskell2010
